# pyprac

./: .gitignore  pyproject.toml  render.html  requirements.txt
algorithm/: 30_implementations.py  remove_k_digits.py
async/py37async/: areq.py  (+5 more)
awesome-asyncio/: CODE_OF_CONDUCT.md  README.md
concurrent.futures/: read_xml.py  use_map_to_concurrent.py
datas/: aiosql.py  pandasql_demo.py  serendipity.py
dbs/: sqlalchemy_1.py
debug/: eliot_demo.py  exp_pysnooper.py  pysnopper.py  traceback.py
docstring/: greykode-ai-docstring.cmd
fastapi/: fastapi_sql.py
games/: make_gifs.py  word_hunt.py
images/: create_own_emoji.py  read_exif.py
itertools/: accumulate.py  chain.py  compress.py  filterfalse.py  permutation.py  product.py  takewhile.py
multiprocessing/: mp_manager.py  mp_pipe.py  mp_pool.py  mp_queue.py
ops/: make_apscheduler.py
pandas_sandbox/: citroen.csv  citroen.html  parse_html.py  series.py
py37async/: asyncq.py  chained.py  countasync.py  countsync.py  foundurls.txt  pyvenv.cfg  rand.py  urls.txt
python_knowledge/: collections.py  copy_vs_deepcopy.py  coroutine_taxi.py  fancy.py  heap_sort.py  itertools_ex.py  magics.py  multiple_decorator.py  oneline_python.py  protected_parent_class.py  python_yield.py
python_lib/: copy_vs_deepcopy.py
security/: hashing_test_extraspace.txt  py_hashing.py
spide_lianjia/: lianjia_spider.py  plot_data.py  链家网租房数据.csv
spider/: FuzzyWuzzy.py
testing/: hypothesis.py
text/: data.json  easy_template.py  file_input.py  list_performance.py  report.html  strings.py  template.html
times/: times.py
(+93 files in other folders)
