[tool.poetry]
name = "pyprac"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
bs4 = "^0.0.1"
aiofiles = "^0.6.0"
aiohttp = "^3.7.2"
requests = "^2.25.0"
pandas = "^1.1.4"
pyecharts = "^1.9.0"
pysnooper = "^0.4.2"
yamllint = "^1.25.0"
FuzzyWuzzy = "^0.18.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
